force-app/main/default/objects/OrderItem/fields/Deployment_Type__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Type__c</fullName>
    <label>Deployment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical Device</fullName>
            </value>
            <value>
                <fullName>Patient Device</fullName>
            </value>
            <value>
                <fullName>Patient Redeployment</fullName>
            </value>
            <value>
                <fullName>Site Device</fullName>
            </value>
            <value>
                <fullName>Site Redeployment</fullName>
            </value>
            <value>
                <fullName>Wearable Device</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
                <isActive>false</isActive>
                <label>n/a</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>