force-app/main/default/objects/OrderItem/fields/Do_Not_Ship__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Ship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Ship</label>
    <type>Checkbox</type>
</CustomField>