force-app/main/default/objects/OrderItem/fields/Version_Status__c.field-meta.xml
<CustomField>
    <fullName>Version_Status__c</fullName>
    <formula>TEXT( Product2.Version_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Version Status</label>
    <type>Text</type>
</CustomField>